SCRUM-178: Endpoint, test, and docs for guild name gen
